  04 Dec 2019;  <chymera@gentoo.org> python-dice-2.4.2.ebuild:
  app-misc/python-dice: updated dependency lists

  04 Nov 2019;  <chymera@gentoo.org> typing-3.7.4.1.ebuild:
  dev-python/typing: KEYWORDS

*typing-3.7.4.1 (09 Oct 2019)

  09 Oct 2019;  <chymera@gentoo.org> +metadata.xml, +typing-3.7.4.1.ebuild:
  dev-python/typing: version bump 3.7.4.1  and PYTHON_COMPAT to 3 series